--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page</title>
-    <script src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="board1" class="board"></div>
+    <div id="board2" class="board"></div>
+  </body>
 </html>
