add endscreen DOM

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,10 @@
   <body>
     <div id="board1" class="board"></div>
     <div id="board2" class="board"></div>
+    <div id="endscreen" class="endscreen">
+      <div id="endscreen-dialogbox" class="endscreen-dialogbox">
+        <h1>Someone won, someone lost!</h1>
+      </div>
+    </div>
   </body>
 </html>
