add endscreen winner text

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div id="board2" class="board"></div>
     <div id="endscreen" class="endscreen">
       <div id="endscreen-dialogbox" class="endscreen-dialogbox">
-        <h1>Someone won, someone lost!</h1>
+        <h1 id="endscreen-winner">Someone won, someone lost!</h1>
       </div>
     </div>
   </body>
