change name inputs to paragraphs

--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,16 @@
     <div class="startscreen startscreen-active" id="startscreen">
       <div class="startscreen-dialogbox">
         <h1 class="startscreen-header">Battleship</h1>
-        <input
-          placeholder="Player 1"
-          type="text"
-          id="startscreen-name-0"
-          class="startscreen-name-0"
-        />
+        <p id="startscreen-name-0" class="startscreen-name-0">Player</p>
 
         <button
-          class="startscreen-switch"
+          class="startscreen-switch startscreen-switch-active"
           id="startscreen-switch"
           type="button"
         >
-          Sw
+          ⇆
         </button>
-        <input
-          placeholder="Player 2"
-          type="text"
-          id="startscreen-name-1"
-          class="startscreen-name-1"
-        />
+        <p id="startscreen-name-1" class="startscreen-name-1">Computer</p>
 
         <div class="startscreen-mode-wrapper-0">
           <input
