fix undefined name bug

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="startscreen startscreen-active" id="startscreen">
       <div class="startscreen-dialogbox">
         <h1 class="startscreen-header">Battleship</h1>
-        <p id="startscreen-name-0" class="startscreen-name-0">Player</p>
+        <p id="startscreen-name-0" class="startscreen-name-0">Human</p>
 
         <button
           class="startscreen-switch startscreen-switch-active"
