--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,13 @@
         </button>
       </div>
     </div>
+
+    <div class="switchscreen" id="switchscreen">
+      <div class="switchscreen-dialogbox">
+        <h1 id="switchscreen-player">Player 1's turn</h1>
+        <p>Are you ready?</p>
+        <button id="switchscreen-play">Play</button>
+      </div>
+    </div>
   </body>
 </html>
