add board numbers and letters

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,18 @@
     <title>Page</title>
   </head>
   <body>
-    <div id="board0" class="board"></div>
-    <div id="board1" class="board"></div>
+    <div class="boards-wrapper" id="boards-wrapper">
+      <div class="board-wrapper" id="board-wrapper">
+        <div class="board-numbers" id="board-numbers0"></div>
+        <div class="board-letters" id="board-letters0"></div>
+        <div id="board0" class="board"></div>
+      </div>
+      <div class="board-wrapper" id="board-wrapper">
+        <div class="board-numbers" id="board-numbers1"></div>
+        <div class="board-letters" id="board-letters1"></div>
+        <div id="board1" class="board"></div>
+      </div>
+    </div>
 
     <div id="endscreen" class="endscreen">
       <div id="endscreen-dialogbox" class="endscreen-dialogbox">
