add random ships button

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>Page</title>
   </head>
   <body>
+    <div class="control-panel">
+      <button class="confirm-button" id="confirm-button">Confirm</button>
+      <button class="random-button" id="random-button">Random</button>
+    </div>
+
     <div class="boards-wrapper" id="boards-wrapper">
       <div class="board-wrapper" id="board-wrapper">
         <div class="board-numbers" id="board-numbers0"></div>
