change general layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,28 @@
     <title>Page</title>
   </head>
   <body>
-    <div class="control-panel">
-      <button class="confirm-button" id="confirm-button">Confirm</button>
-      <button class="random-button" id="random-button">Random</button>
-    </div>
+    <main>
+      <header><h1>Battleship</h1></header>
 
-    <div class="boards-wrapper" id="boards-wrapper">
-      <div class="board-wrapper" id="board-wrapper">
+      <div class="message-board" id="message-board">Hello</div>
+
+      <div class="control-panel">
+        <button class="confirm-button" id="confirm-button">Confirm</button>
+        <button class="random-button" id="random-button">Random</button>
+      </div>
+
+      <div class="board-wrapper board-wrapper0" id="board-wrapper0">
         <div class="board-numbers" id="board-numbers0"></div>
         <div class="board-letters" id="board-letters0"></div>
         <div id="board0" class="board"></div>
       </div>
-      <div class="board-wrapper" id="board-wrapper">
+
+      <div class="board-wrapper board-wrapper1" id="board-wrapper1">
         <div class="board-numbers" id="board-numbers1"></div>
         <div class="board-letters" id="board-letters1"></div>
         <div id="board1" class="board"></div>
       </div>
-    </div>
+    </main>
 
     <div id="endscreen" class="endscreen">
       <div id="endscreen-dialogbox" class="endscreen-dialogbox">
