add board team text

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,14 @@
       </div>
 
       <div class="board-wrapper board-wrapper0" id="board-wrapper0">
+        <div class="board-team">You</div>
         <div class="board-numbers" id="board-numbers0"></div>
         <div class="board-letters" id="board-letters0"></div>
         <div id="board0" class="board"></div>
       </div>
 
       <div class="board-wrapper board-wrapper1" id="board-wrapper1">
+        <div class="board-team">Enemy</div>
         <div class="board-numbers" id="board-numbers1"></div>
         <div class="board-letters" id="board-letters1"></div>
         <div id="board1" class="board"></div>
