--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <main>
       <header><h1>Battleship</h1></header>
 
-      <div class="message-board" id="message-board">Hello</div>
+      <div class="message-board" id="message-board">Place your ships</div>
 
       <div class="control-panel">
         <button class="confirm-button" id="confirm-button">Confirm</button>
