replace h1 with paragraphs

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <header><h1>Battleship</h1></header>
+      <header><h1>BATTLESHIP</h1></header>
 
       <div class="message-board" id="message-board">Place your ships</div>
 
@@ -33,13 +33,13 @@
 
     <div id="endscreen" class="endscreen">
       <div id="endscreen-dialogbox" class="endscreen-dialogbox">
-        <h1 id="endscreen-winner">Someone won, someone lost!</h1>
+        <p id="endscreen-winner">Someone won, someone lost!</p>
       </div>
     </div>
 
     <div class="startscreen startscreen-active" id="startscreen">
       <div class="startscreen-dialogbox">
-        <h1 class="startscreen-header">Battleship</h1>
+        <p class="startscreen-header">Battleship</p>
         <p id="startscreen-name-0" class="startscreen-name-0">Human</p>
 
         <button
@@ -82,7 +82,7 @@
 
     <div class="switchscreen" id="switchscreen">
       <div class="switchscreen-dialogbox">
-        <h1 id="switchscreen-player">Player 1's turn</h1>
+        <p id="switchscreen-player">Player 1's turn</p>
         <p>Are you ready?</p>
         <button id="switchscreen-play">Play</button>
       </div>
