style control panel buttons

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
       <div class="message-board" id="message-board">Place your ships</div>
 
       <div class="control-panel">
-        <button class="confirm-button" id="confirm-button">Confirm</button>
-        <button class="random-button" id="random-button">Random</button>
+        <button class="button confirm-button" id="confirm-button">
+          Confirm
+        </button>
+        <button class="button random-button" id="random-button">Random</button>
       </div>
 
       <div class="board-wrapper board-wrapper0" id="board-wrapper0">
