--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,10 @@
 
     <div class="modal" id="endscreen">
       <div class="modal-dialogbox endscreen-dialogbox" id="endscreen-dialogbox">
-        <p id="endscreen-winner">Someone won, someone lost!</p>
+        <p class="endscreen-winner" id="endscreen-winner">
+          Someone won, someone lost!
+        </p>
+        <button class="button" id="endscreen-play-button">Play Again</button>
       </div>
     </div>
 
