--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
       <div class="modal-dialogbox switchscreen-dialogbox">
         <p id="switchscreen-player">Player 1's turn</p>
         <p>Are you ready?</p>
-        <button id="switchscreen-play">Play</button>
+        <button class="button" id="switchscreen-play">Play</button>
       </div>
     </div>
   </body>
