add controlPanel hiding

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
       <div class="message-board" id="message-board">Place your ships</div>
 
-      <div class="control-panel">
+      <div id="control-panel" class="control-panel">
         <button class="button confirm-button" id="confirm-button">
           Confirm
         </button>
