add switch icon

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           id="startscreen-switch"
           type="button"
         >
-          ⇆
+          <img src="assets/icons/swap.svg" alt="Swap icon" />
         </button>
         <p id="startscreen-name-1" class="startscreen-name startscreen-name-1">
           Computer
